AuthService.Api/k8s/k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: auth
    tier: backend
    environment: production
  annotations:
    description: "Microsserviço responsável por criar contatos"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
        tier: backend
        environment: production
      annotations:
        description: "Pod do microsserviço auth"
    spec:
      containers:
        - name: auth
          image: acrfiap2025.azurecr.io/auth:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: auth-volume
              mountPath: /app/logs/auth
          readinessProbe:
            httpGet:
              path: /auth/health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /auth/health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
      imagePullSecrets:
        - name: acr-auth
      volumes:
        - name: auth-volume
          persistentVolumeClaim:
            claimName: auth-persistent-volume-claim
