AuthService.Api/k8s/k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/auth/register
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /api/auth/login
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /api/auth/validate
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
